# defendguin-neo

./: .cmake-format.json  .gitignore  .kateproject.build  CMakeLists.txt  antartica.toml  antartica.tsx  bullet.cpp  bullet.hpp  camera.cpp  castle.toml  castle.tsx  cog2d.wrap  cog2dintro.cpp  cog2dintro.hpp  compile_commands.json  constants.hpp  cool.tmj  cool.tmx  defendguin-neo.tiled-project  defendguin-neo.tiled-session  defendguin2.kdev4  enemy.cpp  enemy.hpp  enemy.tx  gameactorfactory.cpp  gameactorfactory.hpp  gamescene.cpp  gamescene.hpp  main.cpp  meson.build  player.cpp  player.hpp  propertytypes.json  rules.tmx  rules.txt  rules2.tmx  rules_.tmx  test.tmx  testlvl.json  testlvl.toml  (+6 more)
.cache/clangd/index/: bullet.cpp.8F39B03B8C61667B.idx  bullet.hpp.A132AC1B178195A1.idx  cog2dintro.cpp.DD0CF9E6D407F148.idx  cog2dintro.hpp.82A7042DDE08FE69.idx  constants.hpp.22E37F4D557A0759.idx  enemy.cpp.5DFB38A02980CA7C.idx  enemy.hpp.622A192F9D0C16C8.idx  gamescene.cpp.5A4512192A85C83D.idx  gamescene.hpp.ED2427549C78CD50.idx  main.cpp.1AB087BE2D472218.idx  player.cpp.AD1025753F34D9E8.idx  player.hpp.531586EF5FC014E9.idx
.kdev4/: defendguin2.kdev4
assets/: defendguin_neo.tiled-project  defendguin_neo.tiled-session
assets/fonts/: font.toml
assets/music/: music.qoa  music.toml  music2.toml  mutation.qoa  mutation.toml
assets/src/levels/: cool.tmx  gnarpius.tmx  test.tmx
assets/src/templates/: enemyfighter.tx
assets/src/tilesets/: antartica.tsx  castle.tsx  collision.tsx  enemies.tsx  gnarpius.tsx  rules.txt  rules_collision.tmx
assets/tilesets/: antartica.toml  castle.toml  gnarpius.toml
src/: bullet.cpp  bullet.hpp  bulletblaster.cpp  bulletblaster.hpp  bulletrocket.cpp  bulletrocket.hpp  bulletrocket2.cpp  bulletrocket2.hpp  camera.cpp  camera.hpp  cog2dintro.cpp  cog2dintro.hpp  constants.hpp  enemy.cpp  enemy.hpp  enemybullet.cpp  enemybullet.hpp  enemyegg.cpp  enemyegg.hpp  enemyfighter.cpp  enemyfighter.hpp  entity.hpp  game.cpp  game.hpp  gameactorfactory.cpp  gamescene.cpp  gamescene.hpp  main.cpp  player.cpp  player.hpp  weapon.cpp  weapon.hpp  weaponbullet.cpp  weaponbullet.hpp  weaponpeashooter.cpp  weaponpeashooter.hpp  weaponrocket.cpp  weaponrocket.hpp
subprojects/: cog2d.wrap
